calcul du pricing avec fees uniquement + ajout swagger